<resources>
  <string name="app_name">VajnarGlobe</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Vajnar Globe</string>
  <string name="nav_header_subtitle">vajnar7@gmail.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="latitude">Latitude</string>
  <string name="send">SEND</string>
  <string name="capture">My areas</string>
  <string name="track">Navigation</string>
  <string name="precise_track">Precise Navigation</string>
  <string name="construct">CONSTRUCT</string>
  <string name="add_new_area">NEW</string>
  <string name="longitude">Longitude</string>
  <string name="server_conn_error">Unable to contact server</string>
  <string name="invalid_gnss_data">Invalid input GNSS data</string>
  <string name="no_crnt_position">No current position</string>
  <string name="mark">MARK</string>
  <string name="lat">LAT</string>
  <string name="lon">LON</string>
  <string name="new_area_name">New area name</string>
  <string name="clear">CLEAR</string>
  <string name="new_area">New Area</string>
  <string name="error_wrong_name">Not valid name</string>
  <string name="add">Add</string>
  <string name="mode_tracking">navigation</string>
  <string name="mode_capture">my areas</string>
  <string name="mode_precise">precise</string>
  <string name="no_location">no location</string>
  <string name="test">T</string>
  <string name="no_areas">No areas</string>
  <string name="str_zoom_in">zoom in</string>
  <string name="str_zoom_out">zoom out</string>
  <string name="warning">Warning</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="delete_area">Are you sure you want to delete area?</string>
  <string name="edit">edit</string>
  <string name="user_name">user name</string>
  <string name="same_as_email">user name is the same as e-mail address</string>
  <string name="password">password</string>
  <string name="login">login</string>
  <string name="register">register</string>
  <string name="email">email</string>
  <string name="katastrske_obcine_test">GOZD (2170)</string>
  <string name="katastrske_obcine">katastrske obcine</string>
  <string name="reg_notice">Hvala za vaše zanimanje. V kratkem dobite elektronsko sporočilo z navodili za aktiviranje aplikacije</string>
  <string name="lets_register">Hvala za vaše zanimanje. Prosimo, da se registrirate</string>
  <string name="parcel">parcele</string>
  <string name="calibrate">calibrate</string>
  <string name="start">start</string>
  <string name="stop">stop</string>
  <string name="start_log">start log</string>
  <string name="stop_log">stop log</string>
</resources>
