<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/holo_blue_light"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="si.vajnartech.vajnarglobe.MainActivity">

  <TextView
    android:id="@+id/latitude"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/latitude" />

  <TextView
    android:id="@+id/longitude"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/longitude" />

  <Button
    android:id="@+id/construct"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/construct" />

  <Button
    android:id="@+id/send"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/send" />

  <ImageButton
    android:id="@+id/test1"
    android:layout_width="50dp"
    android:layout_height="53dp"
    app:srcCompat="@android:drawable/ic_notification_overlay" />
</LinearLayout>
